Docker integrado y últimos arreglos