@@ -7,6 +7,7 @@ import org.springframework.boot.CommandLineRunner;
 import org.springframework.stereotype.Component;
 
 import java.util.Locale;
+import java.util.UUID;
 
 @Component
 public class UserDataSeeder implements CommandLineRunner {
@@ -20,7 +21,7 @@ public class UserDataSeeder implements CommandLineRunner {
     @Override
     public void run(String... args) throws Exception {
         if (usuarioRepository.count() == 0) {
-            Faker faker = new Faker(new Locale("es"));
+            Faker faker = new Faker(Locale.of("es"));
             System.out.println("🌱 Iniciando la siembra de usuarios con Datafaker...");
 
             for (int i = 0; i < 5; i++) {
@@ -32,7 +33,7 @@ public class UserDataSeeder implements CommandLineRunner {
                 usuario.setEmail(faker.internet().emailAddress());
                 
                 // ¡Los datos nuevos para que la base de datos no reclame!
-                usuario.setPassword(faker.internet().password(8, 15, true, true, true)); // Contraseña segura aleatoria
+                usuario.setPassword("Seed-" + UUID.randomUUID().toString().replace("-", "").substring(0, 12));
                 usuario.setDireccion(faker.address().streetAddress());
                 usuario.setTelefono(faker.phoneNumber().cellPhone());
                 usuario.setRol("USER"); // Le asignamos el rol por defecto
